# ChangeLog for dev-ruby/require_all
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*require_all-1.2.1 (26 Jul 2013)

  26 Jul 2013; Hans de Graaff <graaff@gentoo.org> +require_all-1.2.1.ebuild,
  +metadata.xml:
  Initial import. New dependency for rails_best_practices.
