@@ -1,0 +1,25 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=5
+USE_RUBY="ruby19 ruby20"
+
+RUBY_FAKEGEM_RECIPE_TEST="rspec"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="CHANGES README.md"
+
+inherit ruby-fakegem
+
+DESCRIPTION="A wonderfully simple way to load your code"
+HOMEPAGE="http://github.com/jarmo/require_all"
+LICENSE="MIT"
+
+KEYWORDS="~amd64"
+SLOT="0"
+IUSE=""
+
+all_ruby_prepare() {
+	sed -i '/cov/I s:^:#:' spec/spec_helper.rb || die
+}
