@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*require_all-1.3.2 (29 Nov 2013)
+
+  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> +require_all-1.3.2.ebuild:
+  Version bump.
+
 *require_all-1.2.1 (26 Jul 2013)
 
   26 Jul 2013; Hans de Graaff <graaff@gentoo.org> +require_all-1.2.1.ebuild,
